Don't use forbidden 'List.of'
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/program-slicing-funcparams@35973 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c